--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,27 @@
     <groupId>Huppert</groupId>
     <artifactId>AlgorithmRepertory</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
+    </dependencies>
+    <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
 
 
 </project>
